--- a/app/views/daily_charts/index.html.erb
+++ b/app/views/daily_charts/index.html.erb
@@ -22,7 +22,7 @@
   </div>
 <% end %>
 
-<table class="tbl2 table-hover table-striped table-bordered"> <!-- pretty -->
+<table class="table table-hover table-striped table-bordered"> <!-- pretty -->
   <thead>
       <tr>
           <th><%= sortable 'filename', :Chart %></th>
