--- a/app/views/edt_files/index.html.erb
+++ b/app/views/edt_files/index.html.erb
@@ -2,7 +2,7 @@
 
 <%= render 'shared/modal' %>
 
-<table class="tbl2 table-hover table-striped table-bordered"> 
+<table class="table table-hover table-striped table-bordered"> 
   <thead>
       <tr>
 	  <th class='tbl_md'><%= sortable 'filename', 'File' %></th>
