--- a/app/views/layouts/_mobile_doctor_navigation.html.erb
+++ b/app/views/layouts/_mobile_doctor_navigation.html.erb
@@ -18,7 +18,7 @@
 
 <% if controller_name == 'daysheet' || controller_name == 'billings' %>
     <div class="col-xs-6 col-xs-offset-6"><%= render 'layouts/mobile_date_select' %></div>
-<% elsif %w(patients ).include?(controller_name) %>
+<% elsif show_search_controllers.include?(controller_name) && action_name == 'index' %>
     <%= render 'layouts/mobile_find' %>
 <% end %>
     </ul>
