--- a/app/views/daysheet/_admin_mobile_index.html.erb
+++ b/app/views/daysheet/_admin_mobile_index.html.erb
@@ -10,7 +10,7 @@
 %>
 
 <div id='page'>
-<table class="tbl2 table-hover table-bordered" >
+<table class="table table-hover table-striped table-bordered table-wrapper-scroll-x">
   <thead>
       <tr>
 	  <th class="tbl_xs"></th>
