--- a/app/views/daysheet/_staff_mobile_index.html.erb
+++ b/app/views/daysheet/_staff_mobile_index.html.erb
@@ -10,7 +10,7 @@
 %>
 
 <div id='page'>
-<table class="tbl2 table-hover table-bordered" >
+<table class="table table-hover table-bordered table-striped table-wrapper-scroll-x" >
   <thead>
       <tr>
 	  <th class="tbl_xs"></th>
@@ -41,19 +41,6 @@
           <th class="tbl_lsm text-center">email</th>
           <th class="tbl_lsm text-center">Diag.</th>
           <th class="tbl_md">Services</th>
-	  <% if device_is_desktop? %>
-          <th class="tbl_sm">Status</th>
-	  <% end %>
-	  <th class="tbl_sm"></th> 
-	  <th class="tbl_sm"></th> 
-	  <th class="tbl_sm"></th> 
-	  <% if !device_is_desktop? %>
-            <th class="tbl_sm"></th>
-          <% end %>
-	  <% unless current_user.patient? %>
-	    <th class="tbl_sm"></th>  <!-- Delete/cancel -->
-  	  <% end %>
-
       </tr>
   </thead>
   <tbody>
