--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'All invoices') %>
 <%= render 'shared/modal' %>
 
-<table class="tbl2 table-hover table-striped table-bordered" >
+<table class="table table-hover table-striped table-bordered" >
   <thead>
       <tr>
 	  <th><%= sortable 'id', '#' %> </th>
