--- a/app/views/layouts/_mobile_footer.html.erb
+++ b/app/views/layouts/_mobile_footer.html.erb
@@ -1,4 +1,5 @@
-<footer class="page-footer small">
+<footer class="page-footer small pt-2">
+  <font size=3>
     <div class="container text-center text-md-right">
     <div class="row">
       <% if logged_in? %>
@@ -31,4 +32,5 @@
       </div>
     </div>
   </div>
+  </font>
 </footer>
