--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,17 +3,19 @@
    <%= render "layouts/#{device_type}_#{current_user.role}_navigation" %>
 <% else %>
 <nav class="navbar navbar-expand-lg navbar-light">
-  <ul class="nav navbar-nav navbar-left">
   <% if device_is_desktop? %>
+  <ul class="nav navbar-nav navbar-left">
     <li class="nav-item"> <%= link_to "#{img} Stoney Creek Medical Walk-In Clinic".html_safe, root_path, id: "logo" %></li>
   </ul>
   <ul class="nav navbar-nav navbar-right">
     <li class="login_link"><%= link_to "<i class='glyphicon glyphicon-log-in'></i> Login".html_safe, new_user_session_path %></li>
   </ul>
 <% else %>
-  <li class="nav-item bg-primary" style="height: 80px; width:12003px; "><%= link_to "Stoney Creek Medical Walk-In Clinic".html_safe, root_path, id: "mobile_logo" %>
-  <div class="ml-3"><font size=3 color=white style="margin-left: 20px;">140 Centennial Pkwy N, Hamilton, ON L8E 1H9 </font></div>
+  <ul class="nav navbar-nav navbar-mobile">
+  <li class="nav-item btn-primary"><%= link_to "Stoney Creek Walk-In Clinic".html_safe, root_path, id: "mobile-logo" %>
+  <center><font size=3 color=white>  140 Centennial Pkwy N, Hamilton, ON L8E 1H9 </font> </center>
   </li>
+  </ul>
 <% end %>
 </nav>
 <% end %>
