--- a/app/views/letters/index.html.erb
+++ b/app/views/letters/index.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'All Letters') %>
 <%= render 'shared/modal' %>
 
-<table class="tbl2 table-hover table-striped table-bordered" >
+<table class="table table-hover table-striped table-bordered" >
   <thead>
       <tr>
 	  <th class="tbl_sm"><%= sortable 'id', '#' %> </th>
