--- a/app/views/patients/_mobile_index.html.erb
+++ b/app/views/patients/_mobile_index.html.erb
@@ -6,7 +6,7 @@
     dob = (@sort == 'dob' && @direction == 'asc')?"DOB &nbsp;<i class='glyphicon glyphicon-sort-by-order-alt'></i>":"DOB &nbsp;<i class='glyphicon glyphicon-sort-by-order'></i>" 
 %>
 
-<table class="tbl2 table-hover table-striped table-bordered"> <!--class="table table-hover table-condensed" > -->
+<table class="tbl2 table-hover table-striped table-bordered table-wrapper-scroll-x"> <!--class="table table-hover table-condensed" > -->
   <thead>
       <tr>
           <th class="tbl_lmd"><%= sortable 'lname', lname.html_safe %></th>
