--- a/app/views/static_pages/_mobile_lookup.html.erb
+++ b/app/views/static_pages/_mobile_lookup.html.erb
@@ -3,11 +3,11 @@
 
 <div class="pt-3"></div>
 <div class="row">
-<div class="card card-info col-md-5 col-md-offset-4 bg-success" >
-  <img class="card-img-top" src="/images/card.jpg" style="height:150px">
+<div class="card card-info col-md-5 col-md-offset-4 col-xs-10 col-xs-offset-1 bg-success padding-0">
+  <img class="card-img-top" src="/images/card.jpg" style="height:180px;">
 <div class="card-body">
 
-  <%= f.input :ohip_num, label: false, placeholder: 'XXXXXXXXXXX AA', hint: "Your healthcard number", input_html: {style: "height: 45px !important; font-size: 1.4em; font-weight:bold; "} %>
+  <%= f.input :ohip_num, label: false, placeholder: 'XXXXXXXXXXX AA', hint: "Your health card number", input_html: {style: "height: 45px !important; font-size: 1.4em; font-weight:bold; "} %>
 
   <div style="display:none" id="register_button">
   <%= button_to 'Register', patients_lookup_path, class:"btn btn-primary", method: 'get' %>
@@ -15,8 +15,7 @@
   <div style="display:none" id="login_button">
   <%= button_to 'Log In', new_user_session_path, class:"btn btn-primary", method: 'get' %>
   </div>
-
-  <div class="text-success pt-3" id="results"></div>
+  <div class="text-success" id="results"></div>
 </div>
 </div>
 </div>
