--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -3,7 +3,7 @@
 
 <div class="col-md-6 col-md-offset-2">
 <h3 class="display-1">Doctor's Schedules</h3>
-<table class="tbl2 table-hover table-striped table-bordered" >
+<table class="table table-hover table-striped table-bordered" >
   <thead>
     <tr>
       <th>Day</th>
