--- a/app/views/users/_desktop_index.html.erb
+++ b/app/views/users/_desktop_index.html.erb
@@ -2,7 +2,7 @@
 <%= render "shared/modal", size: 'sm' %>
 
 <%= @users.count %> users
-<table class="tbl2 table-hover table-striped table-bordered">
+<table class="table table-hover table-striped table-bordered">
    <thead>
       <tr>
           <th> <%= sortable 'email', 'Email' %></th>
