--- a/app/views/users/_mobile_index.html.erb
+++ b/app/views/users/_mobile_index.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'All users') %>
 
-<table class="tbl2 table-hover table-striped table-bordered">
+<table class="table table-hover table-striped table-bordered">
    <thead>
       <tr>
           <th> <%= sortable 'email', 'Email' %></th>
