--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'All visits') %>
 <%= render "shared/modal" %>
 
-<table class="tbl2 table-hover table-striped table-bordered" >
+<table class="table table-hover table-striped table-bordered" >
   <thead>
       <tr>
           <th><%= sortable 'entry_ts', 'Date' %></th>
