--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -571,6 +571,12 @@ input, select{
   width: 30%;
 }
 
+.table th{
+  background: #17a2b8;
+  color: white;
+  height:35px;
+}
+
 .tbl2 td,
 .tbl td {
 //  white-space: nowrap;
@@ -653,8 +659,13 @@ input, select{
 
 .alert {
   margin-bottom: 1px;
-  padding:2px 35px 2px 5px;
+  padding:3px 35px 1px 5px;
+  width: 100%;
   float: left;
+}
+
+.close {
+  margin-top: 5px;
 }
  
 #flash_info {
