--- a/app/views/billings/index.html.erb
+++ b/app/views/billings/index.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'All billing') %>
 <% date = params[:date].to_date rescue Date.today %>
 
-<table class="tbl2 table-hover table-striped table-bordered"> <!--class="table table-hover table-condensed" > -->
+<table class="table table-hover table-striped table-bordered"> <!--class="table table-hover table-condensed" > -->
   <thead>
       <tr>
 	  <th class="tbl_xs"></th>
