--- a/app/views/daysheet/_doctor_desktop_index.html.erb
+++ b/app/views/daysheet/_doctor_desktop_index.html.erb
@@ -10,7 +10,7 @@
 %>
 
 <div id='page'>
-<table class="tbl2 table-hover table-bordered" >
+<table class="table table-hover table-bordered" >
   <thead>
       <tr>
 	  <th class="tbl_xs"></th>
