--- a/app/views/daysheet/_staff_desktop_index.html.erb
+++ b/app/views/daysheet/_staff_desktop_index.html.erb
@@ -11,7 +11,7 @@
 %>
 
 <div id='page'>
-<table class="tbl2 table-hover table-bordered" >
+<table class="table table-hover table-bordered" >
   <thead>
       <tr>
 	  <th class="tbl_xs"></th>
