--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'All doctors') %>
 <%= render "shared/modal", size: 'lg' %>
 
-<table class="tbl2 table-hover table-striped table-bordered" >
+<table class="table table-hover table-striped table-bordered" >
   <thead>
       <tr>
           <th class='tbl_lmd'>Name</th>
