--- a/app/views/export_files/index.html.erb
+++ b/app/views/export_files/index.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'All export files') %>
 
-<table class="tbl2 table-hover table-striped table-bordered" >
+<table class="table table-hover table-striped table-bordered" >
   <thead>
       <tr>
 	  <th> name  </th>
