--- a/app/views/medications/_medication_list.html.erb
+++ b/app/views/medications/_medication_list.html.erb
@@ -1,4 +1,4 @@
-<table class="tbl2 table-hover table-striped"> 
+<table class="table table-hover table-striped"> 
   <thead>
       <tr>
           <th class="tbl_md">Name</th>
