--- a/app/views/patients/_patient_docs.html.erb
+++ b/app/views/patients/_patient_docs.html.erb
@@ -1,7 +1,7 @@
 <b><%= link_to "Uploaded Documents (#{@patient.patient_docs.count})<span class='caret'></span>".html_safe, '#', remote: true, 'data-toggle': "collapse", 'data-target': "#patient_docs",  class: "drop-down-link" %> </b>
 <div class="collapse panel panel-info" id="patient_docs">
   <div class="tbl patient-dropdown-panel-body">
-     <table class="tbl2 table-hover table-striped table-bordered">
+     <table class="table table-hover table-striped table-bordered">
        <th></th><th>Type</th><th>Date</th><th>From Dr.</th><th>File Name</th>
         <% @patient.patient_docs.each do |doc| %>
         <tr>
