--- a/app/views/procedures/index.html.erb
+++ b/app/views/procedures/index.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'All procedures') %>
 <%= render "shared/modal", size: 'lg' %>
 
-<table class="tbl2 table-hover table-striped table-bordered" >
+<table class="table table-hover table-striped table-bordered" >
   <thead>
       <tr>
 	  <th><%= sortable 'code', 'Svc Code' %></th>
