--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -3,9 +3,9 @@
 
 <div class="row">  
   <div class="col-md-5">
-    <img src='/images/clinic.jpg' width="490" style="margin-left: 18px"</img>
+    <img src='/images/clinic2.jpg'width="600" style="margin-left: 28px"</img>
 
-    <div id="address" class="pt-3">140 Centennial Pkwy N, Hamilton, ON L8E 1H9 (905) 561-9255 </div>
+    <div id="address" class="pt-3 ml-5">140 Centennial Pkwy N, Hamilton, ON L8E 1H9 (905) 561-9255 </div>
 
   <div class="row pt-3">
   <div class="card text-center col-md-5 col-md-offset-2 bg-danger">
