--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -1,10 +1,7 @@
 <% provide(:title, 'Welcome') %>
-
-
 <div class="row">  
-  <div class="col-md-5">
-    <img src='/images/clinic2.jpg'width="600" style="margin-left: 28px"</img>
-
+  <div class="col-md-5 col-sm-12">
+    <img src='/images/clinic2.jpg'width="580" style="margin-left: 20px "</img>
     <div id="address" class="pt-3 ml-5">140 Centennial Pkwy N, Hamilton, ON L8E 1H9 (905) 561-9255 </div>
 
   <div class="row pt-3">
@@ -33,8 +30,7 @@
   </div>
   </div>
 
-
-<div class="col-md-7">
+<div class="col-md-6 col-md-offset-1">
   <div class="hdr-text">We are open every Day! </div> 
 <font size=3>
   <div class="pull-right"> <i class='glyphicon glyphicon-time'></i><i> 24/7 Virtual Visits</i> </div>
@@ -64,7 +60,7 @@
 
 
 <div class="row">
-<div class="card col-md-3 col-md-offset-8 bg-success">
+<div class="card col-md-5  col-md-offset-7 bg-success">
   <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
     <img src="/images/happy.gif" class="img-fluid" />
   </div>
