--- a/app/views/static_pages/_desktop_lookup.html.erb
+++ b/app/views/static_pages/_desktop_lookup.html.erb
@@ -3,14 +3,14 @@
   <%= f.error_notification %>
 
 <small>
-<div class="card bg-light mb-3">
+<div class="card bg-success mb-3">
 <div class="card-body">
 <div class="row">
   <div class="col-md-4">
   <img src="/images/on_32_tr.png" width=32><b> Your Ontario Health Card#</b>
   <div class="input-group">
     <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
-    <%= f.input :ohip_num, label: false, placeholder: 'XXXXXXXXXXX AA' %>
+    <%= f.input :ohip_num, label: false, placeholder: 'XXXXXXXXXXX AA'  %>
   </div>
   </div>
 
