--- a/app/views/static_pages/_desktop_lookup.html.erb
+++ b/app/views/static_pages/_desktop_lookup.html.erb
@@ -6,7 +6,7 @@
 <div class="card bg-success mb-3">
 <div class="card-body">
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-md-4 padding-0">
   <img src="/images/on_32_tr.png" width=32><b> Your Ontario Health Card#</b>
   <div class="input-group">
     <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
@@ -28,12 +28,12 @@
   <div class="col-md-4 pt-3 ml-3">
     <div class="text-muted" style="font-size: 1.1em;">
       <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
-      If you have been to our clinic we will look up your patient profile and your visit history. Once registered, you will have access to your record and will be able to book a visit.
+      If you visited our clinic before, we will look up your record. Once registered, you will have access to your patient profile and will be able to book a visit.
     </div>
   </div>
   
   <div class="col-md-1 pt-4 mr-1">
-    <img src="/images/card.jpg" width=100>
+    <img src="/images/card.jpg" width=95>
   </div>
 </div>
 
