some tweaks to registration and lookup form

--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -44,7 +44,7 @@
   <%= render "#{device_type}_lookup" %>
 </div>
 
-<p> If you have registered already, go ahead and make your telephone appointment. Just click the button below, log in and describe your symptoms. Doctor on duty (see the schedule) will call you back to discuss your issue or renew your medications.  </p>
+<p class="pt-3"> Registered already? Go ahead and make your telephone appointment. Just click the button below, log in and describe your symptoms. Doctor on duty (see the schedule) will call you back to discuss your issue or renew your medications.  </p>
 
 <div align="center" class="pt-4"><%= link_to 'Yes, I would like doctor to call me back', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
 
