--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -51,7 +51,7 @@
 
   <div class="row" id="submit">
   <div class="col-md-12">
-    <%= f.button :submit, "Sign Up to Make an Appointment", class: "btn btn-primary btn-lg" %>
+    <%= f.button :submit, "Submit and check your email", class: "btn btn-primary btn-lg" %>
   </div>
   </div>
 
