--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
 <%= f.hidden_field :dob %>
 
 <div class="col-md-4 col-sm-4 col-md-offset-4 col-sm-offset-4">
-<h3>Patient Sign Up</h3>
+<h3>New Patient Registration</h3>
 <div class="well">
 
 <% if current_patient.present? %>
