mobile lookup form, front page changes

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1027,3 +1027,8 @@ card > hr {
   text-transform: uppercase;
 }
 
+.reg-form-control {
+  height: 45px !important; 
+  font-size: 1.4em !important;
+  font-weight: bold;
+}
