--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,6 @@
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 <%= f.hidden_field :dob %>
+<% form_class= device_is_mobile? ? 'reg-form-control' : '' %>
 
 <div class="col-md-4 col-sm-4 col-md-offset-4 col-sm-offset-4">
 <h3>New Patient Registration</h3>
@@ -22,13 +23,13 @@
 
   <div class="row">
   <div class="col-md-12">
-    <%= f.input :ohip_num, label: 'Your Health Card Number', autofocus: true, input_html: {value: "#{ohip_num} #{ohip_ver}"}, readonly: readonly %> 
+    <%= f.input :ohip_num, label: 'Your Health Card Number', autofocus: false, input_html: {value: "#{ohip_num} #{ohip_ver}", class: form_class }, readonly: readonly %> 
   </div>
   </div>
 
   <div class="row">
     <div class="col-md-12" id="email" >
-    <%= f.input :email, required: true, autofocus: false, input_html: { autocomplete: "email", value: email } %>
+    <%= f.input :email, required: true, autofocus: true, hint: "Please enter your email address", input_html: { autocomplete: "email", value: email, class: form_class } %>
   </div>
   </div>
 
@@ -37,7 +38,7 @@
     <%= f.input :password,
                 required: true,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
+                input_html: { autocomplete: "new-password", class: form_class } %>
   </div>
   </div>
               
@@ -45,7 +46,7 @@
   <div class="col-md-12">
     <%= f.input :password_confirmation,
                 required: true,
-                input_html: { autocomplete: "new-password" } %>
+                input_html: { autocomplete: "new-password", class: form_class } %>
   </div>
   </div>
 
