--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -36,9 +36,10 @@
   <div class="pull-right"> <i class='glyphicon glyphicon-time'></i><i> 24/7 Virtual Visits</i> </div>
   <div class='pt-5'></div>
 
-  <p><font size=6>O</font>ur clinic is open 7 days a week. Please check current schedule below. Please register online and doctor will call you back. During callback to discuss your medical issue, doctor will decide if you need to come to the clinic. </p> 
+   <p><font size=7>O</font>ur clinic is open 7 days a week. Current schedule is shown below. Please register online and doctor will call you back. During callback to discuss your medical issue, doctor will decide if you need to come to the clinic. </p>
   <div class="pt-3"></div>
-  <p> <font size=6>P</font>rescriptions can now be renewed over the phone with online registration. Just wait for callback from doctor to discuss what you need. You can pick your prescription at the pharmacy of your choice. Please register below and request callback from doctor, or click button below if you are already registered. 2 step TB tests and Driving Physical Exam are available at $50/step and $120. We do not renew prescriptions for narcotics and controlled medications. </p>
+  <p> <font size=7>P</font>rescriptions can now be renewed over the phone with online registration. Just wait for callback from doctor to discuss what you need. You can pick your prescription at the pharmacy of your choice. Enter your OHIP number to register, or click button below to log into your patient profile. 2 step TB tests and Driving Physical Exam are available at $50/step and $120. <b> We do not renew prescriptions for narcotics and controlled medications.</b> </p>
+
 
 <div class="pt-2">
   <%= render "#{device_type}_lookup" %>
@@ -46,17 +47,21 @@
 
 <p class="pt-3"> Registered already? Go ahead and make your telephone appointment. Just click the button below, log in and describe your symptoms. Doctor on duty (see the schedule) will call you back to discuss your issue or renew your medications.  </p>
 
-<div align="center" class="pt-4"><%= link_to 'Yes, I would like doctor to call me back', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
+<div align="center" class="pt-4"><%= link_to 'Yes, I would like callback from doctor', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
 
 <div class="pt-4">
   <i>
-    Patients who booked their appointments online for visits at the clinic as well as patients with small children  <u>will be given priority</u>. Just go to receptionist and tell them that you registered online. Please, no registrations from our parking lot or waiting room. We will be checking timestamps of all online bookings before letting you jump the line. Thank you for understanding.
+    Patients who booked their appointments online for visits at the clinic, as well as patients with small children,  <u>will be given priority</u>. Just go to receptionist and tell them that you registered online. Please, no registrations from our parking lot or waiting room. We will be checking timestamps of all online bookings before letting you jump the line. Thank you for understanding.
   </i>
 </div>
 
 <div class="pt-5"><i class="glyphicon glyphicon-exclamation-sign mr-2"></i><b>If you have COVID-19 symptoms, please do not come to the clinic. Register online or call the numbers provided. </b></div> 
 
 <div class="pt-5"> All visiting patients are required to wear a mask </div>
+
+<div class="p-5 pull-right">
+<img src="/images/clinic.jpg">
+</div>
 
 </div>
 </div>
