--- a/app/views/patients/_patient_show.html.erb
+++ b/app/views/patients/_patient_show.html.erb
@@ -9,7 +9,7 @@
 <b><%= @patient.pat_type_str %></b> <%= link_to '<i class="glyphicon glyphicon-credit-card"></i>'.html_safe, label_patient_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window',  method: 'get', onclick: "set_md_modal()" %>  <%= @patient.age_str %> <%= @patient.full_sex %></b> 
 <%= hcnum if hcnum.present? %>
 <%= ifhnum if ifhnum.present? %>
-<b>Born:</b> <%= @patient.dob %><% if @patient.chart.present? %> <%= link_to '<i class="glyphicon glyphicon-copy"></i>'.html_safe, chart_patient_path(@patient) %> <% end %>
+<b>Born:</b> <%= @patient.dob %>
 <b>Phone:</b> <%= num_to_phone(@patient.phone) if @patient.phone.present? %>
 <b>Address:</b> <%= @patient.addr_full if @patient.addr.present? %> 
 <b>Allergies:</b> <%= @patient.allergies if @patient.allergies.present? %>
