--- a/app/views/static_pages/_mobile_home.html.erb
+++ b/app/views/static_pages/_mobile_home.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'Welcome') %>
 
 <font size=4>
-  <div class="hdr-text "><center> <i class='glyphicon glyphicon-time'></i> 24/7 Online Registration</center></div>
+  <div class="hdr-text "><center> <i class='glyphicon glyphicon-time'></i> 24/7 Online Visits</center></div>
   
   <div class="row pt-3">
     <div class="col-md-4 col-md-offset-4">
@@ -29,7 +29,7 @@
     <div class="pt-3"></div>
     <div class="panel panel-info news-panel-body">
       <div class="panel-body "><p align="justify"> 
-       Our goal is to call you back within an hour of your request, if made between 8am and 8pm.
+       Our goal is to call you back within an hour of your request, if made between 8am and 8pm. We can't guarantee prompt callbacks during off hours.
   <%= render "schedules/full_schedule" %>
     </div>
   </div>
