Minor tweaks to registration forms and front page

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -78,8 +78,8 @@ var email = document.getElementById("user_email");
 // get_patient is in application.js
 
   if (ohip_num_val) {
-     email.focus();
-     get_patient(ohip_num_val);
+//     email.focus();
+//     get_patient(ohip_num_val);
   }
 
   var cur_pat = "<%= current_patient.id rescue nil %>";
