--- a/app/views/visits/_patient_form.html.erb
+++ b/app/views/visits/_patient_form.html.erb
@@ -8,7 +8,7 @@
 <% current_doctor_id = 1215 %>
 <%= f.hidden_field :doc_id, value: current_doctor_id  %>  <!-- !!!! Dr. Ostapenko -->
 
-<div class="cyan-well">
+<div class="well">
 <div class="row">
   <div class="col-sm-4">
     <% if device_is_desktop? %>
