--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -38,16 +38,15 @@
 
    <p><font size=7>O</font>ur clinic is open 7 days a week. Current schedule is shown below. Please register online and doctor will call you back. During callback to discuss your medical issue, doctor will decide if you need to come to the clinic. </p>
   <div class="pt-3"></div>
-  <p> <font size=7>P</font>rescriptions can now be renewed over the phone with online registration. Just wait for callback from doctor to discuss what you need. You can pick your prescription at the pharmacy of your choice. Enter your OHIP number to register, or click button below to log into your patient profile. 2 step TB tests and Driving Physical Exam are available at $50/step and $120. <b> We do not renew prescriptions for narcotics and controlled medications.</b> </p>
-
+  <p> <font size=7>P</font>rescriptions can now be renewed over the phone with online registration. Just wait for callback from doctor to discuss what you need. You can pick your prescription at the pharmacy of your choice. Enter your OHIP number to register, or click button below to log into your patient profile and book a visit. 2 step TB tests and Driving Physical Exam are available at $50/step and $120. <b> We do not renew prescriptions for narcotics and controlled medications.</b> </p>
 
 <div class="pt-2">
   <%= render "#{device_type}_lookup" %>
 </div>
 
-<p class="pt-3"> Registered already? Go ahead and make your telephone appointment. Just click the button below, log in and describe your symptoms. Doctor on duty (see the schedule) will call you back to discuss your issue or renew your medications.  </p>
+<p class="pt-3"> Registered already? Go ahead and book your visit. Just click the button below, log in and describe your symptoms. Doctor on duty (see the schedule) will call you back to discuss your issue or renew your medications. Doctor will advise if you need to come to the clinic. </p>
 
-<div align="center" class="pt-4"><%= link_to 'Yes, I would like callback from doctor', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
+<div align="center" class="pt-4"><%= link_to 'BOOK A VISIT', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
 
 <div class="pt-4">
   <i>
