--- a/app/views/patients/edit.html.erb
+++ b/app/views/patients/edit.html.erb
@@ -4,7 +4,7 @@
 
 <div class="col-md-8 col-md-offset-2">
 <h3 class='display-1'>Edit Patient Profile</h3>
-<div class="cyan-well">
+<div class="well">
   <% if current_user.patient? %>
     <%= render 'patient_form' %>
   <% else %>
