--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,7 @@
+<% hcv = SvcMonitor.find_by(name: 'hcv') %>
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 <%= f.hidden_field :dob %>
+<%# render 'shared/error_messages', object: f.object %>
 <% form_class= device_is_mobile? ? 'reg-form-control' : '' %>
 
 <div class="col-md-4 col-sm-4 col-md-offset-4 col-sm-offset-4">
@@ -7,8 +9,8 @@
 <div class="well">
 
 <% if current_patient.present? %>
-  <% ohip_num = current_patient.ohip_num
-     ohip_ver = current_patient.ohip_ver
+  <% ohip_num ||= current_patient.ohip_num
+     ohip_ver ||= current_patient.ohip_ver
      email = current_patient.email 
      readonly = ohip_num.present?
    %>
@@ -58,7 +60,7 @@
 
   <div class="row">
   <div class="col-md-12">
-  <%# render "devise/shared/links" %>
+  <%= render "devise/shared/links" %>
   </div>
   </div>
 
@@ -73,13 +75,19 @@ $(document).ready(function() {
 var ohip_num = document.getElementById("user_ohip_num");
 var ohip_num_val = ohip_num.value.replace(/\D/g,'');
 var email = document.getElementById("user_email");
+var hcv_up = "<%= hcv.up %>";
+
+if (hcv_up === 'false') {
+  ohip_num.focus();
+  return;
+}
 
 // If patient was saved in session in front page lookup, ohip number and email are prefilled  
 // get_patient is in application.js
 
   if (ohip_num_val) {
-//     email.focus();
-//     get_patient(ohip_num_val);
+     email.focus();
+     get_patient(ohip_num_val);
   }
 
   var cur_pat = "<%= current_patient.id rescue nil %>";
