--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <% hcv = SvcMonitor.find_by(name: 'hcv') %>
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 <%= f.hidden_field :dob %>
-<%# render 'shared/error_messages', object: f.object %>
+<%= render 'shared/error_messages', object: f.object %>
 <% form_class= device_is_mobile? ? 'reg-form-control' : '' %>
 
 <div class="col-md-4 col-sm-4 col-md-offset-4 col-sm-offset-4">
