--- a/app/views/static_pages/_mobile_home.html.erb
+++ b/app/views/static_pages/_mobile_home.html.erb
@@ -1,8 +1,8 @@
 <% provide(:title, 'Welcome') %>
 <% hcv = SvcMonitor.find_by(name: 'hcv')  %>
 
-<font size=4>
-  <div class="hdr-text "><center> <i class='glyphicon glyphicon-time'></i> 24/7 Online Visits</center></div>
+<font size=3>
+  <div class="hdr-text"><center> <i class='glyphicon glyphicon-time'></i> 24/7 Online Visits</center></div>
   
   <div class="row pt-3">
     <div class="col-md-4 col-md-offset-4">
@@ -14,12 +14,16 @@
     </div>
   </div>
 
+  <% if current_patient && current_patient.user && current_patient.user.confirmed_at %>
+  <h2> Welcome back, <%= current_patient.fname %> </h2>
+  <%= render "/devise/sessions/new" %>
+  <% else %>
   <%= render "#{device_type}_lookup" if hcv.up %>
-
   <div class="pt-2"><center> Already registered? Please log in below. </center></div>
 
 <div align="center" class="pt-4">
-<%= link_to 'Request Doctor Callback', new_user_session_path, class: "btn btn-primary btn-lg" %></div>
+<%= link_to 'Request Doctor Callback', new_user_session_path, class: "btn btn-success btn-lg" %></div>
+  <% end %>
 
 <h2> (905) 561-9255 </h2>
 
