--- a/app/views/static_pages/terms.html.erb
+++ b/app/views/static_pages/terms.html.erb
@@ -115,4 +115,19 @@ THE PARTIES ACKNOWLEDGE AND AGREE THAT THE ESSENTIAL PURPOSE OF THIS SECTION IS 
 </ol>
 </div>
 
+<p><ul><b>9.8 Telemedicine services </b>  
+  <ol>
+    <li> Client understands that the laws that protect privacy and the confidentiality of medical information also apply to telemedicine, and that no information 
+    obtained in the use of telemedicine which identifies him/her will be disclosed to researchers or other entities without their consent. </li>
+    <li> Client understands that he/she has the right to withhold or withdraw consent to the use of telemedicine in the course of his/her care at any 
+time, without affecting their right to future care or treatment. </li>
+    <li> Client understands that he/she has the right to inspect all information obtained in the course of a telemedicine interaction, and may receive 
+  copies of this information for a reasonable fee. </li>
+    <li> Client understands that they may choose to make an in­person appointment at any time. </li>
+    <li> Client understands that the doctor may recommend that they schedule an in­person appointment to address issues that cannot be adequately addressed through telemedicine.  </li>
+    <li> Client understands that telemedicine involves encrypted electronic communication of their personal medical information. </li>
+    <li> Client understands that they may expect the anticipated benefits from the use of telemedicine in their care, but that no results can be guaranteed or assured. </li>
+    <li> Client agrees that any dispute arriving from the telemedicine consult will be resolved in the Province of Ontario. </li>
+  </ol>
+</ul>
 <p>&nbsp;</p>
