--- a/app/views/visits/_consent_form.html.erb
+++ b/app/views/visits/_consent_form.html.erb
@@ -1,7 +1,7 @@
 <div class="row pt-3">
   <div class="col-sm-12"> 
     <p class="small">
-      By clicking on checkbox below, I give my explicit consent to the following:
+      I give my explicit consent to the following:
 
     1. I understand that the laws that protect privacy and the confidentiality of medical information also apply to telemedicine, and that no information 
        obtained in the use of telemedicine which identifies me will be disclosed to researchers or other entities without my consent.
