--- a/app/views/visits/_admin_show.html.erb
+++ b/app/views/visits/_admin_show.html.erb
@@ -5,9 +5,9 @@
 	
 <section>
 <pre class="pre-scrollable-lg">
-<b>Visit Type:</b> <%= @visit.type %>
+<b>Visit Type:</b> <%= @visit.type %> 
 <% if (HCP_PATIENT..WCB_PATIENT).include?(@visit.pat_type) %>
-<b>OHIP Visit HC# </b>: <%= @visit.hin_num %>  <b> Billing Type: </b> <%= @visit.pat_type %>
+<b>Visit HC# </b>: <%= @visit.hin_num %> <%= @patient.ohip_ver %>  (<%= @patient.hin_prov %>)
 <% elsif @visit.pat_type == IFH_PATIENT %>   
 <b>IFH Visit Card# </b>: <%= @visit.hin_num %> 
 <% else %>
