--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -38,9 +38,9 @@
   <div class="pull-right"> <i class='glyphicon glyphicon-time'></i><i> 24/7 Virtual Visits</i> </div>
   <div class='pt-5'></div>
 
-   <p><font size=7>O</font>ur clinic is open 7 days a week. Current schedule is shown below. Please register online and doctor will call you back. During callback to discuss your medical issue, doctor will decide if you need to come to the clinic. </p>
+   <p><font size=7>O</font>ur clinic is open 7 days a week. Current schedule is shown below. Please register here and doctor will call you back. During callback to discuss your medical issue, doctor will decide if you need to come to the clinic. You can also go directly to the clinic, but registering saves time. </p>
   <div class="pt-3"></div>
-  <p> <font size=7>P</font>rescriptions can now be renewed over the phone with online registration. Just wait for callback from doctor to discuss what you need. You can pick your prescription at the pharmacy of your choice. Enter your OHIP number to register, or click button below to log into your patient profile and book a visit. 2 step TB tests and Driving Physical Exam are available at $50/step and $120. <b> We do not renew prescriptions for narcotics and controlled medications.</b> </p>
+  <p> <font size=7>P</font>rescriptions can now be renewed over the phone with online registration. Just wait for callback from doctor to discuss what you need. You can pick your prescription at the pharmacy of your choice. Please enter your OHIP number to register, or click button below to log into your patient profile and book a visit. 2 step TB tests and Driving Physical Exam are available at $50/step and $120. <b> We do not renew prescriptions for narcotics and controlled medications.</b> </p>
 
 <% if current_patient && current_patient.user && current_patient.user.confirmed_at %>
   <h2> Welcome back, <%= current_patient.fname %> </h2>
@@ -77,8 +77,8 @@
 <p class="pt-3">Don’t have a health card? We still can help. Please call the clinic directly during business hours. </p>
 
 <p>
-Covid-19 is still here. This virus is dangerous, especially for older people with health conditions. 
-If you have any or all of these symptoms: fever, coughing, weakness, sweating, muscle pain, do not come to the clinic, this is a sure way to spread the infection!  Please stay at home and call us. You can register and make a telemedicine appointment with the doctor working at the clinic using the button above.
+Covid-19 is still here. This virus is dangerous mostly for older people with serious health conditions. 
+If you have any or all of these symptoms: fever, coughing, weakness, sweating, muscle pain, do not come to the clinic.  Please stay at home and register for a telemedicine appointment with one of our doctors using the button above.
 </p>
 
 <p>
