--- a/app/views/patients/_patient_docs.html.erb
+++ b/app/views/patients/_patient_docs.html.erb
@@ -2,12 +2,12 @@
 <div class="collapse panel panel-info" id="patient_docs">
   <div class="tbl patient-dropdown-panel-body">
      <table class="table table-hover table-striped table-bordered">
-       <th></th><th>Type</th><th>Date</th><th>From Dr.</th><th></th>
+       <th>Filename</th><th>Type</th><th>Date</th><th>From Dr.</th><th></th>
         <% @patient.patient_docs.each do |doc| %>
         <tr>
           <td>
           <% if doc.exists? %>
-          <%= link_to "Patient Doc #{doc.id}", patient_patient_doc_path(@patient,doc), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %>
+          <%= link_to " #{doc.filename}", patient_patient_doc_path(@patient,doc), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %>
           <% end %>
           </td>
           <td> <%= doc.doc_type_str %> </td>
