--- a/app/views/visits/_patient_mobile_visit.html.erb
+++ b/app/views/visits/_patient_mobile_visit.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td><%= link_to visit.date, patient_visit_path(@patient,visit) %></td>
   <td><%= visit.doctor.lname %>
-  <td><%= visit.diag_descr %></td>
+  <td><%= visit.diag_code %></td>
   <td><%= visit.meds_renewed_str %></td>
   <td class="text-center">
   <% if visit.arrived? %>
